- made update.py hide the browser window
- slight change to README.txt file