@@ -1,1 +1,1 @@
-YourChannelHere
+YourChannel
